--- a/www/client.html
+++ b/www/client.html
@@ -1,10 +1,8 @@
 <html>
-<head><title>haXe JS</title></head>
-<body>
---
-<div id="haxe:trace"></div>
---
-<script type="text/javascript" src="test.js"></script>
-
-</body>
+    <head></head>
+    <body>
+    
+    
+      <script src="test.js"></script>
+    </body>
 </html>
